force-app/main/default/objects/Document_Checklist_Item__c/Document_Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Document Checklist Item</label>
    <nameField>
        <displayFormat>DCI-{0000000}</displayFormat>
        <label>DCI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>