force-app/main/default/objects/Document_Checklist_Item__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhaar Proof</fullName>
            </value>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>Date of Birth Proof</fullName>
            </value>
            <value>
                <fullName>Annexure</fullName>
            </value>
            <value>
                <fullName>Affidavit</fullName>
            </value>
            <value>
                <fullName>Police Clearance Certificate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>