force-app/main/default/objects/Document_Checklist_Item__c/fields/Passport_Application__c.field-meta.xml
<CustomField>
    <fullName>Passport_Application__c</fullName>
    <label>Passport Application</label>
    <referenceTo>Passport_Application__c</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>