force-app/main/default/objects/Document_Checklist_Item__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Text</type>
    <length>255</length>
</CustomField>