force-app/main/default/objects/Document_Checklist_Item__c/fields/Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Verified_Date__c</fullName>
    <label>Verified Date</label>
    <type>Date</type>
</CustomField>