force-app/main/default/objects/Document_Checklist_Item__c/validationRules/Received_Requires_Received_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Received_Requires_Received_Date</fullName>
    <active>true</active>
    <description>Document turnaround SLAs are measured from the received date.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Received&quot;), ISBLANK(Received_Date__c) )</errorConditionFormula>
    <errorDisplayField>Received_Date__c</errorDisplayField>
    <errorMessage>Enter the Received Date when marking a document as Received.</errorMessage>
</ValidationRule>