force-app/main/default/objects/Document_Checklist_Item__c/validationRules/Rejected_Requires_Rejection_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Requires_Rejection_Reason</fullName>
    <active>true</active>
    <description>A rejected document sends the applicant back to re-submit; the reason is what tells them what to fix.</description>
    <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Rejected&quot;), ISBLANK(Rejection_Reason__c) )</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Enter a Rejection Reason when rejecting a document. The applicant is told this reason.</errorMessage>
</ValidationRule>